adjust z-index of dropdown component to avoid underlapping page content

--- a/src/components/PaginationControls/styles.module.css
+++ b/src/components/PaginationControls/styles.module.css
@@ -33,6 +33,7 @@
 .resultsPerPage {
   border: 1px solid var(--quaternary-color);
   font-size: 0.9em;
+  z-index: 1;
 }
 
 .resultsPerPage button {
